2020-07-02  Allen D. Ball  <ball@hcf.dev>

	* src/main/resources/schema/device-1-0.xsd,
	src/main/resources/schema/service-1-0.xsd:
	Downloaded from http://www.upnp.org/schemas/.

2020-06-29  Allen D. Ball  <ball@hcf.dev>

	* Re-factored Device and Service to Device, AnnotatedDevice, and
	AbstractDevice and Service, AnnotatedService, and AbstractService,
	respectively.

	* pom.xml: Started development of 2.0-SNAPSHOT.

2020-06-12  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.3.0.

2020-05-13  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.2.0.

2020-04-12  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.1.2.

2020-02-12  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.1.1.

2020-02-07  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.1.0.

2020-02-04  Allen D. Ball  <ball@hcf.dev>

	* Generated license-maven-plugin:update-file-header headers.

2020-02-03  Allen D. Ball  <ball@hcf.dev>

	* License under Apache License, Version 2.0.

2020-01-21  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
	Use Collection.removeIf(Predicate).

2020-01-07  Allen D. Ball  <ball@hcf.dev>

	* Initial support for UPNP service and device annotations.

2020-01-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.3.

2019-12-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.2.

2019-09-08  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.1.

	* src/main/java/ball/upnp/ssdp/SSDPResponse.java:
	Record the InetAddress from the DatagramPacket.

2019-05-02  Allen D. Ball  <ball@sol.local>

	* pom.xml:
	Released version 1.0.0.
	Merged ball.ssdp artifact to ball.upnp.ssdp.
